update dijkstra service